cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug214864.cpp
int main(int argc, char** argv) {
    struct C {
      constexpr int f() { return 0; }
    } constexpr c = C();

    return 0;
}